- init hr backend app
