# src/database/entity/employeLeave.ts
@@ -1,0 +1,35 @@
+import {
+  Entity, PrimaryGeneratedColumn, BaseEntity, ManyToOne, Column, OneToMany
+} from 'typeorm'
+import { Employee } from './employee'
+import { LeaveRecord } from './leaveRecord'
+
+@Entity( { name: 'employee_leave' } )
+export class EmployeeLeave extends BaseEntity {
+  @PrimaryGeneratedColumn( 'identity' )
+    id: string
+
+  @ManyToOne( () => Employee, employee => employee.id )
+    employee: Employee
+  
+  @Column()
+    period: string
+
+  @Column()
+    total_prev_period_leave: number
+
+  @Column()
+    total_current_period_leave: number
+  
+  @Column()
+    total_additional_leave: number
+  
+  @Column()
+    available_leave: number
+
+  @Column()
+    taken_leave: number
+
+  @OneToMany( () => LeaveRecord, record => record.id )
+    records: LeaveRecord[]
+}
