# tsoa/swagger.json
@@ -41,6 +41,29 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"EmployeeUpdateRequestBody": {
+				"properties": {
+					"noInduk": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"birth_date": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"phone_number": {
+						"type": "string"
+					},
+					"employement_date": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {
@@ -115,6 +138,73 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/RegisterRequestParameter"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/employee": {
+			"get": {
+				"operationId": "GetAllEmployee",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Employee"
+				],
+				"security": [
+					{
+						"api_key": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/api/employee/{id}": {
+			"put": {
+				"operationId": "UpdateEmployee",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Employee"
+				],
+				"security": [
+					{
+						"api_key": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/EmployeeUpdateRequestBody"
 							}
 						}
 					}
@@ -317,60 +407,6 @@
 						}
 					}
 				]
-			}
-		},
-		"/api/server-status": {
-			"get": {
-				"operationId": "GetServerStatus",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"serverTime": {
-											"type": "string"
-										},
-										"status": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"serverTime",
-										"status"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Server Status"
-				],
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/api/server-status/routes": {
-			"get": {
-				"operationId": "GetServerRoutes",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Server Status"
-				],
-				"security": [],
-				"parameters": []
 			}
 		}
 	},
